<resources>
    <string name="app_name">Mood Diary</string>
    <string name="fab_content_desc">Add new diary</string>
    <string name="load_data_error">Error loading data</string>
    <string name="diary_title_hint">Title</string>
    <string name="diary_content">Content</string>
    <string name="diary_content_hint">Content</string>
    <string name="change_date_button_text">Change</string>
    <string name="date_hint">Date</string>
    <string name="submit_button_text">Submit</string>
    <string name="home">Home</string>
    <string name="Stat">Statistic</string>
    <string name="openDrawerDesc">Open Drawer</string>
    <string name="closeDrawerDesc">Close Drawer</string>
    <string name="setting">Setting</string>
    <string name="summary">Summary</string>
    <string name="mood_star">Star amount based on mood level</string>
    <string name="mood_rating_text">Mood</string>
    <string name="mood_rater_adder_desc">Mood rater adder</string>
    <string name="mood_rater_remover_desc">Mood rater remover</string>
    <string name="value_adder_desc">Add value</string>
    <string name="value_remover_desc">value remover</string>
    <string name="chart_y_axis_title">hello</string>
</resources>