<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/new_edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="New Diary"
            app:navigationIcon="@drawable/ic_arrow_back"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/NewEditTextEditStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/diary_title_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/NewEditTextEditStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_field"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="start"
            android:hint="@string/diary_content_hint"
            android:maxLines="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/date_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:hint="@string/date_hint"
            android:textSize="10pt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_date_button_text" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_button_text" />


</LinearLayout>